# odp-dpdk

./: .shippable.yml  .travis.yml  DEPENDENCIES  Makefile.am  README  annotated.html  api_2abi-default_2align_8h.html  api_2abi-default_2align_8h_source.html  api_2abi-default_2atomic_8h.html  api_2abi-default_2atomic_8h_source.html  api_2abi-default_2barrier_8h.html  api_2abi-default_2barrier_8h_source.html  api_2abi-default_2buffer_8h_source.html  api_2abi-default_2buffer__types_8h_source.html  api_2abi-default_2byteorder_8h.html  api_2abi-default_2byteorder_8h_source.html  api_2abi-default_2classification_8h_source.html  api_2abi-default_2comp_8h_source.html  api_2abi-default_2cpu_8h_source.html  api_2abi-default_2cpumask_8h.html  api_2abi-default_2cpumask_8h_source.html  api_2abi-default_2crypto_8h_source.html  api_2abi-default_2crypto__types_8h_source.html  api_2abi-default_2debug_8h.html  api_2abi-default_2debug_8h_source.html  api_2abi-default_2dma_8h_source.html  api_2abi-default_2dma__types_8h_source.html  api_2abi-default_2errno_8h.html  api_2abi-default_2errno_8h_source.html  api_2abi-default_2event_8h_source.html  api_2abi-default_2event__types_8h_source.html  api_2abi-default_2event__vector_8h_source.html  api_2abi-default_2event__vector__types_8h_source.html  api_2abi-default_2hash_8h.html  api_2abi-default_2hash_8h_source.html  api_2abi-default_2init_8h.html  api_2abi-default_2init_8h_source.html  api_2abi-default_2ipsec_8h_source.html  api_2abi-default_2ipsec__types_8h_source.html  api_2abi-default_2ml__types_8h_source.html  (+1486 more)
platform/linux-dpdk/: .gitignore  Makefile.am  Makefile.inc  README  dumpconfig  libodp-dpdk.pc.in  libodp-linux.pc.in  odp_buffer.c  odp_buffer_pool.c  odp_crypto.c  odp_dma.c  odp_errno.c  odp_event.c  odp_event_offsets.c  odp_init.c  odp_libconfig.c  odp_ml.c  odp_packet.c  odp_packet_dpdk.c  odp_packet_flags.c  odp_pool.c  odp_queue_basic.c  odp_queue_eventdev.c  odp_queue_if.c  odp_queue_spsc.c  odp_schedule.c  odp_schedule_eventdev.c  odp_schedule_if.c  odp_shared_memory.c  odp_std_api.c  odp_std_clib.c  odp_std_clib_api.c  odp_system_info.c  odp_thread.c  odp_time.c  odp_timer.c
platform/linux-dpdk/arch/aarch64/: cpu_flags.c  cpu_flags.h  odp_atomic.c  odp_atomic.h  odp_cpu.h  odp_cpu_cycles.c  odp_cpu_idling.h  odp_global_time.c  odp_llsc.h  odp_random.h  odp_sysinfo_parse.c  odp_wait_until.h
platform/linux-dpdk/arch/arm/: odp_atomic.h  odp_cpu.h  odp_cpu_idling.h  odp_llsc.h  odp_sysinfo_parse.c
platform/linux-dpdk/arch/default/: odp_atomic.c  odp_atomic.h  odp_cpu.h  odp_cpu_cycles.c  odp_cpu_idling.h  odp_global_time.c  odp_hash_crc32.c  odp_random.c  odp_random.h  odp_sysinfo_parse.c  odp_wait_until.h
platform/linux-dpdk/arch/mips64/: odp_sysinfo_parse.c
platform/linux-dpdk/arch/powerpc/: odp_sysinfo_parse.c
platform/linux-dpdk/arch/x86/: cpu_flags.c  cpu_flags.h  odp_cpu.h  odp_cpu_cycles.c  odp_global_time.c  odp_random.h  odp_sysinfo_parse.c
platform/linux-dpdk/doc/: platform_specific.dox
platform/linux-dpdk/dumpconfig/: .gitignore  Makefile.am
platform/linux-dpdk/example/ml/: .gitignore  Makefile.am  README.md  conv.onnx  conv_gen.py  conv_gen.sh  example_digit.csv  mnist-12.onnx  odp_ml_run_conv.sh  odp_ml_run_mnist.sh  odp_ml_run_model_explorer.sh  odp_ml_run_simple_linear.sh  simple_linear.onnx
platform/linux-dpdk/include/: event_vector_internal.h  odp_buffer_inlines.h  odp_buffer_internal.h  odp_buffer_pool_internal.h  odp_config_internal.h  odp_errno_define.h  odp_event_internal.h  odp_event_vector_internal.h  odp_eventdev_internal.h  odp_packet_dpdk.h  odp_packet_internal.h  odp_packet_io_internal.h  odp_pool_internal.h  odp_ptr_ring_mpmc_internal.h  odp_ptr_ring_spsc_internal.h  odp_ptr_ring_st_internal.h  odp_queue_basic_internal.h  odp_ring_mpmc_internal.h  odp_ring_spsc_internal.h  odp_ring_st_internal.h  odp_rx_adapter_internal.h  odp_shm_internal.h  odp_thread_internal.h  odp_timer_internal.h
platform/linux-dpdk/include-abi/odp/api/abi/: align.h  atomic.h  barrier.h  buffer.h  buffer_types.h  byteorder.h  classification.h  comp.h  cpumask.h  crypto.h  crypto_types.h  debug.h  dma.h  dma_types.h  errno.h  event.h  event_types.h  event_vector.h  event_vector_types.h  hash.h  init.h  ipsec.h  ipsec_types.h  ml_types.h  packet.h  packet_flags.h  packet_io.h  packet_io_types.h  packet_types.h  pool.h  pool_types.h  proto_stats.h  proto_stats_types.h  queue.h  queue_types.h  random.h  rwlock.h  rwlock_recursive.h  schedule.h  schedule_types.h  (+19 more)
platform/linux-dpdk/include/api/: odp_debug.h
platform/linux-dpdk/include/odp/api/: packet_flags_inlines.h
platform/linux-dpdk/include/odp/api/plat/: buffer_inline_types.h  buffer_inlines.h  byteorder_inlines.h  cpu_inlines.h  crypto_inlines.h  debug_inlines.h  dma_inlines.h  event_inline_types.h  event_inlines.h  event_validation_external.h  event_vector_inline_types.h  event_vector_inlines.h  hash_inlines.h  ipsec_inlines.h  packet_flag_inlines.h  packet_flag_inlines_api.h  packet_inline_types.h  packet_inlines.h  (+21 more)
platform/linux-dpdk/m4/: configure.m4  odp_cpu.m4  odp_event_validation.m4  odp_libconfig.m4  odp_ml.m4  odp_pcapng.m4  odp_scheduler.m4  odp_wfe.m4
platform/linux-dpdk/test/: Makefile.am  alternate-timer.conf  crypto.conf  default-timer.conf  process-mode.conf  sched-basic.conf  stash-custom.conf  wrapper-script.sh
platform/linux-dpdk/test/example/: generator
platform/linux-dpdk/test/example/classifier/: pktio_env
platform/linux-dpdk/test/example/generator/: pktio_env
platform/linux-dpdk/test/example/ipsec_api/: pktio_env
platform/linux-dpdk/test/example/ipsec_crypto/: pktio_env
platform/linux-dpdk/test/example/l2fwd_simple/: pktio_env
platform/linux-dpdk/test/example/l3fwd/: pktio_env
platform/linux-dpdk/test/example/packet/: pktio_env
platform/linux-dpdk/test/example/ping/: pktio_env
platform/linux-dpdk/test/example/simple_pipeline/: pktio_env
platform/linux-dpdk/test/example/switch/: pktio_env
platform/linux-dpdk/test/performance/: Makefile.am  odp_ml_perf_run.sh
platform/linux-dpdk/test/performance/dmafwd/: pktio_env
(+1315 files in other folders)
